# experiments

./: .gitignore  ARCHITECTURE.md  GOALS.md  README.md  RESEARCH-QUESTIONS.md  audit-prompt.md  instructions.md
.github/workflows/: ci.yml
audit/: RESOLUTION.md  SUMMARY.md
audit/findings/: A1-cryptographic-correctness.md  A10-operational.md  A2-cbor-strictness.md  A3-cardano-semantics.md  A4-test-design.md  A5-rust-idioms.md  A6-lsq-binary.md  A7-top-level-docs.md  A8-wiki-coherence.md  A9-plan-completeness.md
audit/wiki/: fetch_refs.py  index.md  log.md  overview.md  refs.md
audit/wiki/pages/: 00-synthesis.md  01-top-level-docs.md  02-prior-audit.md  03-cardano-wiki.md  04-skills-tooling.md  (+2 more)
cardano-wiki/: README.md  SCHEMA.md
cardano-wiki/wiki/: .search-index.md  index.md  log.md  overview.md
models/raftlet/: .gitignore  README.md  raftlet.fizz
omega-commitment/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
omega-commitment/.cargo/: config.toml
omega-commitment/.github/workflows/: ci.yml
omega-commitment/crates/omega-claim-prover/: Cargo.toml
omega-commitment/crates/omega-claim-prover/benches/: bench_prove_p50.rs
omega-commitment/crates/omega-claim-prover/src/: blake3_trace.rs  lib.rs  test_fixtures.rs
omega-commitment/crates/omega-claim-prover/tests/: prover_smoke.rs  soundness_negative.rs
omega-commitment/crates/omega-claim-tx/: Cargo.toml  README.md
omega-commitment/crates/omega-claim-tx/src/: lib.rs
omega-commitment/crates/omega-claim-tx/tests/: claim_tx_cbor.rs
omega-commitment/crates/omega-claim-verifier/: Cargo.toml
omega-commitment/crates/omega-claim-verifier/benches/: bench_verify_p50.rs
omega-commitment/crates/omega-claim-verifier/src/: lib.rs
omega-commitment/crates/omega-claim-verifier/tests/: verifier_roundtrip.rs
omega-commitment/crates/omega-commitment-bundle/: Cargo.toml
omega-commitment/crates/omega-commitment-bundle/src/: bundle.rs  lib.rs  main.rs  recompute.rs  sub_tree_id.rs
omega-commitment/crates/omega-commitment-bundle/tests/: end_to_end_integration.rs  golden_bundle.rs
omega-commitment/crates/omega-commitment-cli/: Cargo.toml
omega-commitment/crates/omega-commitment-cli/src/: main.rs
omega-commitment/crates/omega-commitment-cli/tests/: cli.rs
omega-commitment/crates/omega-commitment-core/: Cargo.toml
omega-commitment/crates/omega-commitment-core/benches/: tree.rs
omega-commitment/crates/omega-commitment-core/src/: governance_state_leaf.rs  hash.rs  header_leaf.rs  lib.rs  script_registry_leaf.rs  serde_helpers.rs  snapshot_manifest.rs  stake_state_leaf.rs  token_policy_leaf.rs  tree.rs  tx_index_leaf.rs  utxo_leaf.rs  witness.rs
omega-commitment/crates/omega-commitment-core/tests/: golden_per_leaf.rs  golden_vectors.rs  governance_state_integration.rs  header_integration.rs  script_registry_integration.rs  stake_state_integration.rs  token_policy_integration.rs  tx_index_integration.rs  utxo_integration.rs
omega-commitment/crates/omega-commitment-core/tests/fixtures/: governance_state_small.json  header_chain_small.json  script_registry_small.json  stake_state_small.json  token_policies_small.json  tx_index_small.json  utxo_set_small.json
omega-commitment/crates/omega-commitment-ingest/: Cargo.toml
omega-commitment/crates/omega-commitment-ingest/examples/: probe_ledger_state_paths.rs
omega-commitment/crates/omega-commitment-ingest/src/: cbor.rs  governance.rs  lib.rs  main.rs  script.rs  stake.rs  token_policy.rs  utxo.rs
omega-commitment/crates/omega-commitment-ingest/tests/: cli.rs  golden_ingest.rs  governance_ingest_integration.rs  qa_pipeline.rs  script_ingest_integration.rs  stake_ingest_integration.rs  token_policy_ingest_integration.rs  utxo_ingest_integration.rs
omega-commitment/crates/omega-commitment-ingest/tests/fixtures/: governance_snapshot.cbor  governance_snapshot.cbor.md  ledger_state_extended.cbor  ledger_state_extended.cbor.md  ledger_state_minimal.cbor  ledger_state_minimal.cbor.md  stake_snapshot.cbor  stake_snapshot.cbor.md
omega-commitment/crates/omega-mock-ledger/: Cargo.toml
omega-commitment/crates/omega-mock-ledger/src/: cardano.rs  lib.rs  schema.rs  storage.rs  writer.rs
omega-commitment/crates/omega-mock-ledger/tests/: apply_smoke.rs  concurrent_readers.rs  load_heartbeat.rs  restart_durability.rs  schema.rs  storage.rs
omega-commitment/crates/omega-network/: Cargo.toml
omega-commitment/crates/omega-network/src/: discovery.rs  inbound.rs  lib.rs  network.rs  protocol.rs  rpc.rs  snapshot.rs
omega-commitment/crates/omega-network/tests/: discovery.rs  loopback_round_trip.rs  network_traits.rs  rpc_codec.rs  snapshot_protocol.rs
omega-commitment/crates/omega-toy-consensus/: Cargo.toml  README.md
omega-commitment/crates/omega-toy-consensus/benches/: bench_submit_p50.rs
omega-commitment/crates/omega-toy-consensus/examples/: three_node_local.rs
omega-commitment/crates/omega-toy-consensus/kani-proofs/: snapshot_install_state_machine.rs
omega-commitment/crates/omega-toy-consensus/src/: config.rs  error.rs  lib.rs  node.rs  routing.rs
omega-commitment/crates/omega-toy-consensus/src/config/: tests.rs
omega-commitment/crates/omega-toy-consensus/src/rpc/: error.rs  mod.rs  server.rs  types.rs
omega-commitment/crates/omega-toy-consensus/src/rpc/types/: tests.rs
omega-commitment/crates/omega-toy-consensus/tests/: batch_limits.rs  failpoint_byzantine_replay.rs  failpoint_drop_appendentries.rs  failpoint_writer_closed.rs  leader_change_during_submit.rs  leader_forwarding.rs  partition.rs  proptest_rpc_inputs.rs  routing.rs  shuttle_writer_handshake.rs  single_claim_roundtrip.rs  single_leader_emerges.rs  snapshot_install_during_submit.rs
omega-commitment/crates/omega-toy-consensus/tests/common/: mod.rs  synthetic_claim.rs
omega-commitment/crates/omega-utxo-snapshot/: Cargo.toml
omega-commitment/crates/omega-utxo-snapshot/src/: main.rs
omega-commitment/scripts/: download_snapshot.sh  dump_ledger_state.sh  setup_daedalus.md  setup_headless_node.md
skills/: README.md  install.sh  manifest.toml
skills/local/: CHANGELOG.md
(+108 files in other folders)
