[workspace]
resolver = "2"
members = [
  "crates/omega-commitment-core",
  "crates/omega-commitment-cli",
  "crates/omega-commitment-bundle",
  "crates/omega-commitment-ingest",
  "crates/omega-utxo-snapshot",
  "crates/omega-claim-tx",
  "crates/omega-claim-prover",
  "crates/omega-claim-verifier",
]

[workspace.package]
edition = "2021"
rust-version = "1.79"
license = "Apache-2.0"
repository = "https://github.com/IntersectMBO/omega-commitment"

[workspace.dependencies]
blake3 = { version = "1", default-features = false }
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
proptest = "1.6"
criterion = "0.5"
minicbor = { version = "0.20", features = ["std"] }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
rand = { version = "0.10.0", default-features = false }

# Plonky3 is pinned once at the workspace layer. Every harness crate
# consumes these p3-* crates with `workspace = true`.
p3-air = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-batch-stark = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-blake3-air = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-field = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-lookup = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-monty-31 = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }

[profile.test.package.p3-batch-stark]
debug-assertions = false
