[workspace]
resolver = "2"
members = [
  "crates/omega-commitment-core",
  "crates/omega-commitment-cli",
  "crates/omega-commitment-bundle",
  "crates/omega-commitment-ingest",
  "crates/omega-utxo-snapshot",
  "crates/omega-claim-tx",
  "crates/omega-claim-prover",
  "crates/omega-claim-verifier",
  "crates/omega-mock-ledger",
  "crates/omega-network",
  "crates/omega-toy-consensus",
]

[workspace.package]
edition = "2021"
rust-version = "1.79"
license = "Apache-2.0"
repository = "https://github.com/IntersectMBO/omega-commitment"

[workspace.dependencies]
anyhow = "1"
async-trait = "=0.1.89"
blake3 = { version = "1", default-features = false }
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = { version = "0.4", features = ["serde"] }
thiserror = "2"
clap = { version = "4.5", features = ["derive"] }
ciborium = "=0.2.2"
proptest = "1.6"
criterion = "0.5"
fail = { version = "0.5", features = ["failpoints"] }
futures = "=0.3.32"
jsonrpsee = { version = "0.26", default-features = false, features = ["server", "macros", "client", "http-client"] }
minicbor = { version = "0.20", features = ["std"] }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
rand = { version = "0.10.0", default-features = false }
schemars = "0.8"
shuttle = "0.7"
libp2p = { version = "=0.55.0", default-features = false, features = ["tcp", "tokio", "noise", "yamux", "mdns", "kad", "request-response"] }
num_cpus = "=1.17.0"
openraft = { version = "=0.9.24", features = ["serde"] }
pallas-validate = "=1.0.0-alpha.6"
r2d2 = "=0.8.10"
r2d2_sqlite = "=0.25.0"
rusqlite = { version = "=0.32.1", features = ["bundled"] }
tempfile = "=3.27.0"
tokio = { version = "=1.52.1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
turmoil = "0.7"

# Plonky3 is pinned once at the workspace layer. Every harness crate
# consumes these p3-* crates with `workspace = true`.
p3-air = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-batch-stark = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-blake3-air = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-field = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-lookup = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-monty-31 = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3", rev = "fc774b10eb66b1e4b75a1825e1af7acb98bcc71a" }

# Workspace-level lints. Every harness crate inherits via
# `[lints] workspace = true`, escalating to errors in CI under
# `-D warnings`. Documentation hygiene is enforced by
# `skills/local/omega-rustdoc-style/SKILL.md`.
[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
missing_crate_level_docs = "warn"

# `soundness_negative.rs` intentionally proves malformed traces and then
# checks verifier rejection. In debug builds p3-batch-stark's internal
# `check_constraints` aborts in the prover before that verifier path runs.
[profile.test.package.p3-batch-stark]
debug-assertions = false
