[package]
name = "omega-claim-prover"
version = "0.11.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
omega-claim-tx = { path = "../omega-claim-tx" }
omega-commitment-core = { path = "../omega-commitment-core" }

hex.workspace = true
p3-air.workspace = true
p3-baby-bear.workspace = true
p3-batch-stark.workspace = true
p3-blake3-air.workspace = true
p3-challenger.workspace = true
p3-commit.workspace = true
p3-dft.workspace = true
p3-field.workspace = true
p3-fri.workspace = true
p3-lookup.workspace = true
p3-matrix.workspace = true
p3-merkle-tree.workspace = true
p3-monty-31.workspace = true
p3-poseidon2.workspace = true
p3-poseidon2-air.workspace = true
p3-symmetric.workspace = true
p3-uni-stark.workspace = true
postcard.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
omega-commitment-core = { path = "../omega-commitment-core" }
omega-claim-verifier = { path = "../omega-claim-verifier" }

[[bench]]
name = "bench_prove_p50"
harness = false
