[package]
name = "omega-claim-tx"
version = "0.11.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
omega-commitment-core = { path = "../omega-commitment-core" }
serde = { workspace = true, features = ["derive"] }
hex.workspace = true
thiserror.workspace = true
minicbor.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
