[package]
name = "omega-commitment-bundle"
version = "0.9.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "omega_commitment_bundle"
path = "src/lib.rs"

[[bin]]
name = "omega-bundle"
path = "src/main.rs"

[dependencies]
omega-commitment-core = { path = "../omega-commitment-core" }
clap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
hex.workspace = true
thiserror.workspace = true
anyhow = "1"
blake2.workspace = true
sha3.workspace = true

[dev-dependencies]
tempfile = "3"
