[package]
name = "omega-commitment-cli"
version = "0.10.0-rc1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "omega-commitment"
path = "src/main.rs"

[dependencies]
omega-commitment-core = { path = "../omega-commitment-core" }
clap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
hex.workspace = true
thiserror.workspace = true
anyhow = "1.0"
tempfile = "3.27"

[dev-dependencies]
