[package]
name = "omega-network"
version = "0.11.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
failpoints = ["dep:fail", "fail/failpoints"]

[dependencies]
omega-mock-ledger = { path = "../omega-mock-ledger" }

ciborium.workspace = true
fail = { workspace = true, optional = true }
hex.workspace = true
libp2p.workspace = true
openraft.workspace = true
serde.workspace = true
sha3.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "=3.27.0"

[lints]
workspace = true
