[package]
name = "omega-toy-consensus"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[lints]
workspace = true

[lib]
name = "omega_toy_consensus"
path = "src/lib.rs"

[[bin]]
name = "omega-toy-consensus"
path = "src/bin/omega-toy-consensus.rs"

[[bin]]
name = "snapshot-state-machine-kani"
path = "kani-proofs/snapshot_install_state_machine.rs"
required-features = ["kani"]
test = false
bench = false
doc = false

[dependencies]
omega-claim-tx = { path = "../omega-claim-tx" }
omega-mock-ledger = { path = "../omega-mock-ledger" }
omega-network = { path = "../omega-network" }
openraft = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
jsonrpsee = { workspace = true }
humantime-serde = "1"
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# Self-dep so the integration tests in `tests/` see the lib built with
# the `test-support` feature on. Production consumers must not depend
# on this crate with `features = ["test-support"]`.
omega-toy-consensus = { path = ".", features = ["test-support"] }
omega-claim-prover = { path = "../omega-claim-prover", features = ["test-fixtures"] }
turmoil = { workspace = true }
fail = { workspace = true }
shuttle = { workspace = true }
proptest = { workspace = true }
tokio-test = "0.4"
tempfile = { workspace = true }
criterion = "0.5"
toml = "0.8"

[features]
default = []
failpoints = ["fail/failpoints", "omega-mock-ledger/failpoints", "omega-network/failpoints"]
kani = []
shuttle-tests = []
# `test-support` exposes the in-process raft dispatcher controls
# (`partition_raft_link`, `clear_raft_link_blocks`) for use by the
# crate's own integration tests. Production callers must NOT enable
# this feature; doing so would let any caller induce raft link blocks
# on a running node. The crate's `[dev-dependencies]` activates it
# automatically via the `omega-toy-consensus` self-dep below.
test-support = []

[package.metadata.kani]
unstable = { stubbing = "true" }
default-unwind = 5

[[bench]]
name = "bench_submit_p50"
harness = false
